<resources>
    <string name="app_name">Assignment4</string>
    <string name="carName1">Vehicles</string>
    <string name="buttonName">Modify</string>
    <string name="carDetails">Details</string>
    <string name="carYear">Year</string>
    <string name="carCylinders">Cylinders</string>
    <string name="carPrice">Price</string>
    <string name="backToView">Back to View</string>
    <string name="Modify">Modify</string>
    <string name="Submit">Submit</string>
    <string name="buttonName2">Car Name</string>
    <string name="buy">Buy</string>
    <string name="Images"></string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Pay">Pay</string>
    <string name="Amount">Amount</string>
    <string name="Total">Total</string>
    <string name="add">Add</string>
    <string name="currentCar"></string>
    <string name="main_menu_item1">View Info</string>
    <string name="main_menu_item2">Add Details</string>
    <string name="main_menu_item3">Modify Details</string>
    <string name="main_menu_item4">Vehicles Sold</string>
    <string name="main_menu_item5">Vehicles Available</string>
    <string name="company">Vehicle Company</string>
    <string name="companyText">Vehicle Company</string>
    <string name="Available">Available</string>
    <string name="AvailableBoolean">Available Boolean</string>
    <string name="companyName">Assignment 3: Coding Cars</string>
    <string name="companyAddress">9 Main Street, BARRIE, L4N 1T6, ONTARIO</string>
    <string name="carsSold">Cars Sold</string>
    <string name="Profit">Profit</string>
    <string name="Card">Card</string>
    <string name="Edit">Edit</string>
    <string name="zero">0</string>
    <string name="notInStock">Not in Stock</string>
    <string name="inStock">In Stock</string>
    <string name="Model">Model</string>
    <string name="List">List</string>
    <string name="Colour">Colour</string>
    <string name="Date">Date Sold</string>

</resources>