<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="66dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/vehicleButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#CFCCCC"
                android:text="@string/carName1" />

            <EditText
                android:id="@+id/carName2"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/buttonName2" />

            <EditText
                android:id="@+id/carModel"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Model" />

            <EditText
                android:id="@+id/carColour"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Colour" />

            <EditText
                android:id="@+id/carDateSold"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Date" />

            <EditText
                android:id="@+id/carCompany2"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/company" />

            <EditText
                android:id="@+id/addYear"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/carYear" />

            <EditText
                android:id="@+id/addCylinder"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/carCylinders" />

            <EditText
                android:id="@+id/addPrice"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/carPrice" />

            <CheckBox
                android:id="@+id/available3"
                android:layout_width="243dp"
                android:layout_height="48dp"
                android:text="@string/Available" />

            <Button
                android:id="@+id/submit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/Submit" />

            <Button
                android:id="@+id/add2"
                android:layout_width="107dp"
                android:layout_height="64dp"
                android:backgroundTint="#FFDADA"
                android:text="@string/add" />

            <Button
                android:id="@+id/modify"
                android:layout_width="107dp"
                android:layout_height="69dp"
                android:backgroundTint="#FFDADA"
                android:text="@string/Modify" />

            <Button
                android:id="@+id/backToView"
                android:layout_width="107dp"
                android:layout_height="64dp"
                android:backgroundTint="#FFDADA"
                android:text="@string/backToView" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>