<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    tools:visibility="invisible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/vehicleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFDADA"
                android:text="@string/carName1" />

            <ImageView
                android:id="@+id/Images"
                android:layout_width="148dp"
                android:layout_height="148dp" />

            <TextView
                android:id="@+id/Details1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carDetails"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/Details2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carDetails" />

            <TextView
                android:id="@+id/Model1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Model"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/Model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Model" />

            <TextView
                android:id="@+id/Sold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/sold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date" />

            <TextView
                android:id="@+id/Color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Colour"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/colour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Colour" />

            <TextView
                android:id="@+id/company3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/companyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyText" />

            <TextView
                android:id="@+id/Year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carYear"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carYear" />

            <TextView
                android:id="@+id/cylinders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carCylinders"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/Cylinders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carCylinders" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carPrice"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carPrice" />

            <TextView
                android:id="@+id/available6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Available"
                android:textColor="#E41515" />

            <TextView
                android:id="@+id/isAvailable2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AvailableBoolean" />

            <Button
                android:id="@+id/Buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFDADA"
                android:text="@string/buy" />

            <Button
                android:id="@+id/Modify"
                android:layout_width="88dp"
                android:layout_height="49dp"
                android:backgroundTint="#FFDADA"
                android:text="@string/buttonName" />

            <Button
                android:id="@+id/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFDADA"
                android:text="@string/add" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>