<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/vehicleButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CFCCCC"
                android:text="Vehicles" />

            <TextView
                android:id="@+id/CurrentName"
                android:layout_width="122dp"
                android:layout_height="21dp"
                android:text="@string/carDetails" />

            <TextView
                android:id="@+id/currentModel"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:text="@string/Model" />

            <TextView
                android:id="@+id/currentColor"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:text="@string/Colour" />

            <TextView
                android:id="@+id/currentDateSold"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:text="@string/Date" />

            <TextView
                android:id="@+id/CurrentCompany2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Company" />

            <TextView
                android:id="@+id/modifyYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carYear" />

            <TextView
                android:id="@+id/modifyCylinder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carCylinders" />

            <TextView
                android:id="@+id/modifyPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carPrice" />

            <TextView
                android:id="@+id/available2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Available" />

            <EditText
                android:id="@+id/CarName"
                android:layout_width="227dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Car Name" />

            <EditText
                android:id="@+id/CarModel"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Model" />

            <EditText
                android:id="@+id/CarColor"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Colour" />

            <EditText
                android:id="@+id/CarCompany"
                android:layout_width="233dp"
                android:layout_height="53dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Car Company" />

            <EditText
                android:id="@+id/modifyYear2"
                android:layout_width="233dp"
                android:layout_height="53dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/carYear" />

            <EditText
                android:id="@+id/DateSold"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Date" />

            <EditText
                android:id="@+id/modifyCylinder2"
                android:layout_width="233dp"
                android:layout_height="53dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/carCylinders" />

            <EditText
                android:id="@+id/modifyPrice2"
                android:layout_width="233dp"
                android:layout_height="53dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/carPrice" />

            <CheckBox
                android:id="@+id/available"
                android:layout_width="242dp"
                android:layout_height="30dp"
                android:text="Available" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="submit" />

            <Button
                android:id="@+id/Modify2"
                android:layout_width="107dp"
                android:layout_height="69dp"
                android:backgroundTint="#FFDADA"
                android:text="Modify" />

            <Button
                android:id="@+id/Add2"
                android:layout_width="107dp"
                android:layout_height="64dp"
                android:backgroundTint="#FFDADA"
                android:text="Add" />

            <Button
                android:id="@+id/BackToView"
                android:layout_width="107dp"
                android:layout_height="64dp"
                android:backgroundTint="#FFDADA"
                android:text="Back To VIew" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>